// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TabsRow render should render in amp 1`] = `
<TestProvider app={{...}}>
  <Provider router={{...}} app={{...}} history={{...}}>
    <MuiThemeProviderOld theme={{...}}>
      <WithStyles(inject-TabsRow-with-app) items={{...}}>
        <inject-TabsRow-with-app items={{...}} classes={{...}}>
          <TabsRow items={{...}} classes={{...}} app={{...}} variant="scrollable" centered={false}>
            <WithStyles(Tabs) value={false} onChange={[Function]} indicatorColor="secondary" variant="scrollable" className="RSFTabsRow-root-134" classes={{...}}>
              <Tabs value={false} onChange={[Function]} indicatorColor="secondary" variant="scrollable" className="RSFTabsRow-root-134" theme={{...}} classes={{...}} centered={false} component="div" fullWidth={false} scrollable={false} ScrollButtonComponent={[Function: WithStyles]} scrollButtons="auto" textColor="inherit">
                <div className="MuiTabs-root-140 RSFTabsRow-root-134 RSFTabsRow-root-134" variant="scrollable">
                  <EventListener target="window" onResize={[Function: debounced]} />
                  <div className="MuiTabs-flexContainer-141">
                    <div className="MuiTabs-scroller-143 RSFTabsRow-scroller-137 MuiTabs-fixed-144" style={{...}} role="tablist" onScroll={[Function: debounced]}>
                      <div className="MuiTabs-flexContainer-141">
                        <WithStyles(Tab) label={{...}} icon={[undefined]} classes={{...}} fullWidth={false} indicator={false} selected={false} onChange={[Function]} textColor="inherit" value={0}>
                          <Tab label={{...}} icon={[undefined]} fullWidth={false} indicator={false} selected={false} onChange={[Function]} textColor="inherit" value={0} classes={{...}} disabled={false}>
                            <WithStyles(ButtonBase) focusRipple={true} className="MuiTab-root-149 RSFTabsRow-tab-135 MuiTab-textColorInherit-151" role="tab" aria-selected={false} disabled={false} onClick={[Function]}>
                              <ButtonBase focusRipple={true} className="MuiTab-root-149 RSFTabsRow-tab-135 MuiTab-textColorInherit-151" role="tab" aria-selected={false} disabled={false} onClick={[Function]} classes={{...}} centerRipple={false} component="button" disableRipple={false} disableTouchRipple={false} tabIndex="0" type="button">
                                <button className="MuiButtonBase-root-161 MuiTab-root-149 RSFTabsRow-tab-135 MuiTab-textColorInherit-151" onBlur={[Function]} onFocus={[Function]} onKeyDown={[Function]} onKeyUp={[Function]} onMouseDown={[Function]} onMouseLeave={[Function]} onMouseUp={[Function]} onTouchEnd={[Function]} onTouchMove={[Function]} onTouchStart={[Function]} tabIndex="0" type="button" disabled={false} role="tab" aria-selected={false} onClick={[Function]}>
                                  <span className="MuiTab-wrapper-157">
                                    <span className="MuiTab-labelContainer-158">
                                      <span className="MuiTab-label-159">
                                        <WithStyles(inject-Link) className="RSFTabsRow-link-138" to="https://www.example.com" prefetch={[undefined]} onClick={[Function]}>
                                          <inject-Link className="RSFTabsRow-link-138" to="https://www.example.com" prefetch={[undefined]} onClick={[Function]} classes={{...}}>
                                            <Link className="RSFTabsRow-link-138" to="https://www.example.com" prefetch={[undefined]} onClick={[Function]} classes={{...}} history={{...}} router={{...}} location={{...}} anchorProps={{...}}>
                                              <a data-moov-link="on" className="RSFLink-root-164 RSFTabsRow-link-138" style={[undefined]} onClick={[Function]} href="https://www.example.com">
                                                Tab 1
                                              </a>
                                            </Link>
                                          </inject-Link>
                                        </WithStyles(inject-Link)>
                                      </span>
                                    </span>
                                  </span>
                                  <NoSsr defer={false} fallback={{...}}>
                                    <WithStyles(TouchRipple) innerRef={[Function]} center={false}>
                                      <TouchRipple center={false} classes={{...}}>
                                        <TransitionGroup component="span" enter={true} exit={true} className="MuiTouchRipple-root-165" childFactory={[Function: childFactory]}>
                                          <span className="MuiTouchRipple-root-165" />
                                        </TransitionGroup>
                                      </TouchRipple>
                                    </WithStyles(TouchRipple)>
                                  </NoSsr>
                                </button>
                              </ButtonBase>
                            </WithStyles(ButtonBase)>
                          </Tab>
                        </WithStyles(Tab)>
                        <WithStyles(Tab) label={{...}} icon={[undefined]} classes={{...}} fullWidth={false} indicator={false} selected={false} onChange={[Function]} textColor="inherit" value={1}>
                          <Tab label={{...}} icon={[undefined]} fullWidth={false} indicator={false} selected={false} onChange={[Function]} textColor="inherit" value={1} classes={{...}} disabled={false}>
                            <WithStyles(ButtonBase) focusRipple={true} className="MuiTab-root-149 RSFTabsRow-tab-135 MuiTab-textColorInherit-151" role="tab" aria-selected={false} disabled={false} onClick={[Function]}>
                              <ButtonBase focusRipple={true} className="MuiTab-root-149 RSFTabsRow-tab-135 MuiTab-textColorInherit-151" role="tab" aria-selected={false} disabled={false} onClick={[Function]} classes={{...}} centerRipple={false} component="button" disableRipple={false} disableTouchRipple={false} tabIndex="0" type="button">
                                <button className="MuiButtonBase-root-161 MuiTab-root-149 RSFTabsRow-tab-135 MuiTab-textColorInherit-151" onBlur={[Function]} onFocus={[Function]} onKeyDown={[Function]} onKeyUp={[Function]} onMouseDown={[Function]} onMouseLeave={[Function]} onMouseUp={[Function]} onTouchEnd={[Function]} onTouchMove={[Function]} onTouchStart={[Function]} tabIndex="0" type="button" disabled={false} role="tab" aria-selected={false} onClick={[Function]}>
                                  <span className="MuiTab-wrapper-157">
                                    <span className="MuiTab-labelContainer-158">
                                      <span className="MuiTab-label-159">
                                        <WithStyles(inject-Link) className="RSFTabsRow-link-138" to="https://www.example.com" prefetch={[undefined]} onClick={[Function]}>
                                          <inject-Link className="RSFTabsRow-link-138" to="https://www.example.com" prefetch={[undefined]} onClick={[Function]} classes={{...}}>
                                            <Link className="RSFTabsRow-link-138" to="https://www.example.com" prefetch={[undefined]} onClick={[Function]} classes={{...}} history={{...}} router={{...}} location={{...}} anchorProps={{...}}>
                                              <a data-moov-link="on" className="RSFLink-root-164 RSFTabsRow-link-138" style={[undefined]} onClick={[Function]} href="https://www.example.com">
                                                Tab 2
                                              </a>
                                            </Link>
                                          </inject-Link>
                                        </WithStyles(inject-Link)>
                                      </span>
                                    </span>
                                  </span>
                                  <NoSsr defer={false} fallback={{...}}>
                                    <WithStyles(TouchRipple) innerRef={[Function]} center={false}>
                                      <TouchRipple center={false} classes={{...}}>
                                        <TransitionGroup component="span" enter={true} exit={true} className="MuiTouchRipple-root-165" childFactory={[Function: childFactory]}>
                                          <span className="MuiTouchRipple-root-165" />
                                        </TransitionGroup>
                                      </TouchRipple>
                                    </WithStyles(TouchRipple)>
                                  </NoSsr>
                                </button>
                              </ButtonBase>
                            </WithStyles(ButtonBase)>
                          </Tab>
                        </WithStyles(Tab)>
                      </div>
                      <WithStyles(TabIndicator) className="MuiTabs-indicator-148 RSFTabsRow-indicator-132 RSFTabsRow-noSelection-133" color="secondary" style={{...}}>
                        <TabIndicator className="MuiTabs-indicator-148 RSFTabsRow-indicator-132 RSFTabsRow-noSelection-133" color="secondary" style={{...}} classes={{...}}>
                          <span className="MuiPrivateTabIndicator-root-172 MuiPrivateTabIndicator-colorSecondary-174 MuiTabs-indicator-148 RSFTabsRow-indicator-132 RSFTabsRow-noSelection-133" style={{...}} />
                        </TabIndicator>
                      </WithStyles(TabIndicator)>
                    </div>
                  </div>
                </div>
              </Tabs>
            </WithStyles(Tabs)>
          </TabsRow>
        </inject-TabsRow-with-app>
      </WithStyles(inject-TabsRow-with-app)>
    </MuiThemeProviderOld>
  </Provider>
</TestProvider>
`;

exports[`TabsRow render should render tabs with images 1`] = `
<TestProvider>
  <Provider router={{...}} app={{...}} history={{...}}>
    <MuiThemeProviderOld theme={{...}}>
      <WithStyles(inject-TabsRow-with-app) items={{...}}>
        <inject-TabsRow-with-app items={{...}} classes={{...}}>
          <TabsRow items={{...}} classes={{...}} app={{...}} variant="scrollable" centered={false}>
            <WithStyles(Tabs) value={false} onChange={[Function]} indicatorColor="secondary" variant="scrollable" className="RSFTabsRow-root-3" classes={{...}}>
              <Tabs value={false} onChange={[Function]} indicatorColor="secondary" variant="scrollable" className="RSFTabsRow-root-3" theme={{...}} classes={{...}} centered={false} component="div" fullWidth={false} scrollable={false} ScrollButtonComponent={[Function: WithStyles]} scrollButtons="auto" textColor="inherit">
                <div className="MuiTabs-root-9 RSFTabsRow-root-3 RSFTabsRow-root-3" variant="scrollable">
                  <EventListener target="window" onResize={[Function: debounced]} />
                  <div className="MuiTabs-flexContainer-10">
                    <div className="MuiTabs-scroller-12 RSFTabsRow-scroller-6 MuiTabs-fixed-13" style={{...}} role="tablist" onScroll={[Function: debounced]}>
                      <div className="MuiTabs-flexContainer-10">
                        <WithStyles(Tab) label={[undefined]} icon={{...}} classes={{...}} fullWidth={false} indicator={false} selected={false} onChange={[Function]} textColor="inherit" value={0}>
                          <Tab label={[undefined]} icon={{...}} fullWidth={false} indicator={false} selected={false} onChange={[Function]} textColor="inherit" value={0} classes={{...}} disabled={false}>
                            <WithStyles(ButtonBase) focusRipple={true} className="MuiTab-root-18 RSFTabsRow-tab-4 MuiTab-textColorInherit-20" role="tab" aria-selected={false} disabled={false} onClick={[Function]}>
                              <ButtonBase focusRipple={true} className="MuiTab-root-18 RSFTabsRow-tab-4 MuiTab-textColorInherit-20" role="tab" aria-selected={false} disabled={false} onClick={[Function]} classes={{...}} centerRipple={false} component="button" disableRipple={false} disableTouchRipple={false} tabIndex="0" type="button">
                                <button className="MuiButtonBase-root-30 MuiTab-root-18 RSFTabsRow-tab-4 MuiTab-textColorInherit-20" onBlur={[Function]} onFocus={[Function]} onKeyDown={[Function]} onKeyUp={[Function]} onMouseDown={[Function]} onMouseLeave={[Function]} onMouseUp={[Function]} onTouchEnd={[Function]} onTouchMove={[Function]} onTouchStart={[Function]} tabIndex="0" type="button" disabled={false} role="tab" aria-selected={false} onClick={[Function]}>
                                  <span className="MuiTab-wrapper-26">
                                    <WithStyles(inject-Image) src="https://example.com" alt={[undefined]}>
                                      <inject-Image src="https://example.com" alt={[undefined]} classes={{...}}>
                                        <Image src="https://example.com" alt={[undefined]} classes={{...}} amp={false} quality={{...}} contain={false} fill={false} lazy={false} lazyOffset={100} optimize={{...}}>
                                          <div className="RSFImage-root-33">
                                            <img src="https://example.com" className="" layout={{...}} height={[undefined]} width={[undefined]} alt={[undefined]} onError={[Function]} />
                                          </div>
                                        </Image>
                                      </inject-Image>
                                    </WithStyles(inject-Image)>
                                  </span>
                                  <NoSsr defer={false} fallback={{...}}>
                                    <WithStyles(TouchRipple) innerRef={[Function]} center={false}>
                                      <TouchRipple center={false} classes={{...}}>
                                        <TransitionGroup component="span" enter={true} exit={true} className="MuiTouchRipple-root-37" childFactory={[Function: childFactory]}>
                                          <span className="MuiTouchRipple-root-37" />
                                        </TransitionGroup>
                                      </TouchRipple>
                                    </WithStyles(TouchRipple)>
                                  </NoSsr>
                                </button>
                              </ButtonBase>
                            </WithStyles(ButtonBase)>
                          </Tab>
                        </WithStyles(Tab)>
                        <WithStyles(Tab) label={[undefined]} icon={{...}} classes={{...}} fullWidth={false} indicator={false} selected={false} onChange={[Function]} textColor="inherit" value={1}>
                          <Tab label={[undefined]} icon={{...}} fullWidth={false} indicator={false} selected={false} onChange={[Function]} textColor="inherit" value={1} classes={{...}} disabled={false}>
                            <WithStyles(ButtonBase) focusRipple={true} className="MuiTab-root-18 RSFTabsRow-tab-4 MuiTab-textColorInherit-20" role="tab" aria-selected={false} disabled={false} onClick={[Function]}>
                              <ButtonBase focusRipple={true} className="MuiTab-root-18 RSFTabsRow-tab-4 MuiTab-textColorInherit-20" role="tab" aria-selected={false} disabled={false} onClick={[Function]} classes={{...}} centerRipple={false} component="button" disableRipple={false} disableTouchRipple={false} tabIndex="0" type="button">
                                <button className="MuiButtonBase-root-30 MuiTab-root-18 RSFTabsRow-tab-4 MuiTab-textColorInherit-20" onBlur={[Function]} onFocus={[Function]} onKeyDown={[Function]} onKeyUp={[Function]} onMouseDown={[Function]} onMouseLeave={[Function]} onMouseUp={[Function]} onTouchEnd={[Function]} onTouchMove={[Function]} onTouchStart={[Function]} tabIndex="0" type="button" disabled={false} role="tab" aria-selected={false} onClick={[Function]}>
                                  <span className="MuiTab-wrapper-26">
                                    <WithStyles(inject-Image) src="https://example.com" alt={[undefined]}>
                                      <inject-Image src="https://example.com" alt={[undefined]} classes={{...}}>
                                        <Image src="https://example.com" alt={[undefined]} classes={{...}} amp={false} quality={{...}} contain={false} fill={false} lazy={false} lazyOffset={100} optimize={{...}}>
                                          <div className="RSFImage-root-33">
                                            <img src="https://example.com" className="" layout={{...}} height={[undefined]} width={[undefined]} alt={[undefined]} onError={[Function]} />
                                          </div>
                                        </Image>
                                      </inject-Image>
                                    </WithStyles(inject-Image)>
                                  </span>
                                  <NoSsr defer={false} fallback={{...}}>
                                    <WithStyles(TouchRipple) innerRef={[Function]} center={false}>
                                      <TouchRipple center={false} classes={{...}}>
                                        <TransitionGroup component="span" enter={true} exit={true} className="MuiTouchRipple-root-37" childFactory={[Function: childFactory]}>
                                          <span className="MuiTouchRipple-root-37" />
                                        </TransitionGroup>
                                      </TouchRipple>
                                    </WithStyles(TouchRipple)>
                                  </NoSsr>
                                </button>
                              </ButtonBase>
                            </WithStyles(ButtonBase)>
                          </Tab>
                        </WithStyles(Tab)>
                      </div>
                      <WithStyles(TabIndicator) className="MuiTabs-indicator-17 RSFTabsRow-indicator-1 RSFTabsRow-noSelection-2" color="secondary" style={{...}}>
                        <TabIndicator className="MuiTabs-indicator-17 RSFTabsRow-indicator-1 RSFTabsRow-noSelection-2" color="secondary" style={{...}} classes={{...}}>
                          <span className="MuiPrivateTabIndicator-root-44 MuiPrivateTabIndicator-colorSecondary-46 MuiTabs-indicator-17 RSFTabsRow-indicator-1 RSFTabsRow-noSelection-2" style={{...}} />
                        </TabIndicator>
                      </WithStyles(TabIndicator)>
                    </div>
                  </div>
                </div>
              </Tabs>
            </WithStyles(Tabs)>
          </TabsRow>
        </inject-TabsRow-with-app>
      </WithStyles(inject-TabsRow-with-app)>
    </MuiThemeProviderOld>
  </Provider>
</TestProvider>
`;

exports[`TabsRow render should render tabs with text 1`] = `
<TestProvider>
  <Provider router={{...}} app={{...}} history={{...}}>
    <MuiThemeProviderOld theme={{...}}>
      <WithStyles(inject-TabsRow-with-app) items={{...}}>
        <inject-TabsRow-with-app items={{...}} classes={{...}}>
          <TabsRow items={{...}} classes={{...}} app={{...}} variant="scrollable" centered={false}>
            <WithStyles(Tabs) value={false} onChange={[Function]} indicatorColor="secondary" variant="scrollable" className="RSFTabsRow-root-49" classes={{...}}>
              <Tabs value={false} onChange={[Function]} indicatorColor="secondary" variant="scrollable" className="RSFTabsRow-root-49" theme={{...}} classes={{...}} centered={false} component="div" fullWidth={false} scrollable={false} ScrollButtonComponent={[Function: WithStyles]} scrollButtons="auto" textColor="inherit">
                <div className="MuiTabs-root-55 RSFTabsRow-root-49 RSFTabsRow-root-49" variant="scrollable">
                  <EventListener target="window" onResize={[Function: debounced]} />
                  <div className="MuiTabs-flexContainer-56">
                    <div className="MuiTabs-scroller-58 RSFTabsRow-scroller-52 MuiTabs-fixed-59" style={{...}} role="tablist" onScroll={[Function: debounced]}>
                      <div className="MuiTabs-flexContainer-56">
                        <WithStyles(Tab) label="Tab 1" icon={[undefined]} classes={{...}} fullWidth={false} indicator={false} selected={false} onChange={[Function]} textColor="inherit" value={0}>
                          <Tab label="Tab 1" icon={[undefined]} fullWidth={false} indicator={false} selected={false} onChange={[Function]} textColor="inherit" value={0} classes={{...}} disabled={false}>
                            <WithStyles(ButtonBase) focusRipple={true} className="MuiTab-root-64 RSFTabsRow-tab-50 MuiTab-textColorInherit-66" role="tab" aria-selected={false} disabled={false} onClick={[Function]}>
                              <ButtonBase focusRipple={true} className="MuiTab-root-64 RSFTabsRow-tab-50 MuiTab-textColorInherit-66" role="tab" aria-selected={false} disabled={false} onClick={[Function]} classes={{...}} centerRipple={false} component="button" disableRipple={false} disableTouchRipple={false} tabIndex="0" type="button">
                                <button className="MuiButtonBase-root-76 MuiTab-root-64 RSFTabsRow-tab-50 MuiTab-textColorInherit-66" onBlur={[Function]} onFocus={[Function]} onKeyDown={[Function]} onKeyUp={[Function]} onMouseDown={[Function]} onMouseLeave={[Function]} onMouseUp={[Function]} onTouchEnd={[Function]} onTouchMove={[Function]} onTouchStart={[Function]} tabIndex="0" type="button" disabled={false} role="tab" aria-selected={false} onClick={[Function]}>
                                  <span className="MuiTab-wrapper-72">
                                    <span className="MuiTab-labelContainer-73">
                                      <span className="MuiTab-label-74">
                                        Tab 1
                                      </span>
                                    </span>
                                  </span>
                                  <NoSsr defer={false} fallback={{...}}>
                                    <WithStyles(TouchRipple) innerRef={[Function]} center={false}>
                                      <TouchRipple center={false} classes={{...}}>
                                        <TransitionGroup component="span" enter={true} exit={true} className="MuiTouchRipple-root-79" childFactory={[Function: childFactory]}>
                                          <span className="MuiTouchRipple-root-79" />
                                        </TransitionGroup>
                                      </TouchRipple>
                                    </WithStyles(TouchRipple)>
                                  </NoSsr>
                                </button>
                              </ButtonBase>
                            </WithStyles(ButtonBase)>
                          </Tab>
                        </WithStyles(Tab)>
                        <WithStyles(Tab) label="Tab 2" icon={[undefined]} classes={{...}} fullWidth={false} indicator={false} selected={false} onChange={[Function]} textColor="inherit" value={1}>
                          <Tab label="Tab 2" icon={[undefined]} fullWidth={false} indicator={false} selected={false} onChange={[Function]} textColor="inherit" value={1} classes={{...}} disabled={false}>
                            <WithStyles(ButtonBase) focusRipple={true} className="MuiTab-root-64 RSFTabsRow-tab-50 MuiTab-textColorInherit-66" role="tab" aria-selected={false} disabled={false} onClick={[Function]}>
                              <ButtonBase focusRipple={true} className="MuiTab-root-64 RSFTabsRow-tab-50 MuiTab-textColorInherit-66" role="tab" aria-selected={false} disabled={false} onClick={[Function]} classes={{...}} centerRipple={false} component="button" disableRipple={false} disableTouchRipple={false} tabIndex="0" type="button">
                                <button className="MuiButtonBase-root-76 MuiTab-root-64 RSFTabsRow-tab-50 MuiTab-textColorInherit-66" onBlur={[Function]} onFocus={[Function]} onKeyDown={[Function]} onKeyUp={[Function]} onMouseDown={[Function]} onMouseLeave={[Function]} onMouseUp={[Function]} onTouchEnd={[Function]} onTouchMove={[Function]} onTouchStart={[Function]} tabIndex="0" type="button" disabled={false} role="tab" aria-selected={false} onClick={[Function]}>
                                  <span className="MuiTab-wrapper-72">
                                    <span className="MuiTab-labelContainer-73">
                                      <span className="MuiTab-label-74">
                                        Tab 2
                                      </span>
                                    </span>
                                  </span>
                                  <NoSsr defer={false} fallback={{...}}>
                                    <WithStyles(TouchRipple) innerRef={[Function]} center={false}>
                                      <TouchRipple center={false} classes={{...}}>
                                        <TransitionGroup component="span" enter={true} exit={true} className="MuiTouchRipple-root-79" childFactory={[Function: childFactory]}>
                                          <span className="MuiTouchRipple-root-79" />
                                        </TransitionGroup>
                                      </TouchRipple>
                                    </WithStyles(TouchRipple)>
                                  </NoSsr>
                                </button>
                              </ButtonBase>
                            </WithStyles(ButtonBase)>
                          </Tab>
                        </WithStyles(Tab)>
                      </div>
                      <WithStyles(TabIndicator) className="MuiTabs-indicator-63 RSFTabsRow-indicator-47 RSFTabsRow-noSelection-48" color="secondary" style={{...}}>
                        <TabIndicator className="MuiTabs-indicator-63 RSFTabsRow-indicator-47 RSFTabsRow-noSelection-48" color="secondary" style={{...}} classes={{...}}>
                          <span className="MuiPrivateTabIndicator-root-86 MuiPrivateTabIndicator-colorSecondary-88 MuiTabs-indicator-63 RSFTabsRow-indicator-47 RSFTabsRow-noSelection-48" style={{...}} />
                        </TabIndicator>
                      </WithStyles(TabIndicator)>
                    </div>
                  </div>
                </div>
              </Tabs>
            </WithStyles(Tabs)>
          </TabsRow>
        </inject-TabsRow-with-app>
      </WithStyles(inject-TabsRow-with-app)>
    </MuiThemeProviderOld>
  </Provider>
</TestProvider>
`;

exports[`TabsRow render should render tabs with urls 1`] = `
<TestProvider>
  <Provider router={{...}} app={{...}} history={{...}}>
    <MuiThemeProviderOld theme={{...}}>
      <WithStyles(inject-TabsRow-with-app) items={{...}}>
        <inject-TabsRow-with-app items={{...}} classes={{...}}>
          <TabsRow items={{...}} classes={{...}} app={{...}} variant="scrollable" centered={false}>
            <WithStyles(Tabs) value={false} onChange={[Function]} indicatorColor="secondary" variant="scrollable" className="RSFTabsRow-root-91" classes={{...}}>
              <Tabs value={false} onChange={[Function]} indicatorColor="secondary" variant="scrollable" className="RSFTabsRow-root-91" theme={{...}} classes={{...}} centered={false} component="div" fullWidth={false} scrollable={false} ScrollButtonComponent={[Function: WithStyles]} scrollButtons="auto" textColor="inherit">
                <div className="MuiTabs-root-97 RSFTabsRow-root-91 RSFTabsRow-root-91" variant="scrollable">
                  <EventListener target="window" onResize={[Function: debounced]} />
                  <div className="MuiTabs-flexContainer-98">
                    <div className="MuiTabs-scroller-100 RSFTabsRow-scroller-94 MuiTabs-fixed-101" style={{...}} role="tablist" onScroll={[Function: debounced]}>
                      <div className="MuiTabs-flexContainer-98">
                        <WithStyles(Tab) label={{...}} icon={[undefined]} classes={{...}} fullWidth={false} indicator={false} selected={false} onChange={[Function]} textColor="inherit" value={0}>
                          <Tab label={{...}} icon={[undefined]} fullWidth={false} indicator={false} selected={false} onChange={[Function]} textColor="inherit" value={0} classes={{...}} disabled={false}>
                            <WithStyles(ButtonBase) focusRipple={true} className="MuiTab-root-106 RSFTabsRow-tab-92 MuiTab-textColorInherit-108" role="tab" aria-selected={false} disabled={false} onClick={[Function]}>
                              <ButtonBase focusRipple={true} className="MuiTab-root-106 RSFTabsRow-tab-92 MuiTab-textColorInherit-108" role="tab" aria-selected={false} disabled={false} onClick={[Function]} classes={{...}} centerRipple={false} component="button" disableRipple={false} disableTouchRipple={false} tabIndex="0" type="button">
                                <button className="MuiButtonBase-root-118 MuiTab-root-106 RSFTabsRow-tab-92 MuiTab-textColorInherit-108" onBlur={[Function]} onFocus={[Function]} onKeyDown={[Function]} onKeyUp={[Function]} onMouseDown={[Function]} onMouseLeave={[Function]} onMouseUp={[Function]} onTouchEnd={[Function]} onTouchMove={[Function]} onTouchStart={[Function]} tabIndex="0" type="button" disabled={false} role="tab" aria-selected={false} onClick={[Function]}>
                                  <span className="MuiTab-wrapper-114">
                                    <span className="MuiTab-labelContainer-115">
                                      <span className="MuiTab-label-116">
                                        <WithStyles(inject-Link) className="RSFTabsRow-link-95" to="https://www.example.com" prefetch={[undefined]} onClick={[Function]}>
                                          <inject-Link className="RSFTabsRow-link-95" to="https://www.example.com" prefetch={[undefined]} onClick={[Function]} classes={{...}}>
                                            <Link className="RSFTabsRow-link-95" to="https://www.example.com" prefetch={[undefined]} onClick={[Function]} classes={{...}} history={{...}} router={{...}} location={{...}} anchorProps={{...}}>
                                              <a data-moov-link="on" className="RSFLink-root-121 RSFTabsRow-link-95" style={[undefined]} onClick={[Function]} href="https://www.example.com">
                                                Tab 1
                                              </a>
                                            </Link>
                                          </inject-Link>
                                        </WithStyles(inject-Link)>
                                      </span>
                                    </span>
                                  </span>
                                  <NoSsr defer={false} fallback={{...}}>
                                    <WithStyles(TouchRipple) innerRef={[Function]} center={false}>
                                      <TouchRipple center={false} classes={{...}}>
                                        <TransitionGroup component="span" enter={true} exit={true} className="MuiTouchRipple-root-122" childFactory={[Function: childFactory]}>
                                          <span className="MuiTouchRipple-root-122" />
                                        </TransitionGroup>
                                      </TouchRipple>
                                    </WithStyles(TouchRipple)>
                                  </NoSsr>
                                </button>
                              </ButtonBase>
                            </WithStyles(ButtonBase)>
                          </Tab>
                        </WithStyles(Tab)>
                        <WithStyles(Tab) label={{...}} icon={[undefined]} classes={{...}} fullWidth={false} indicator={false} selected={false} onChange={[Function]} textColor="inherit" value={1}>
                          <Tab label={{...}} icon={[undefined]} fullWidth={false} indicator={false} selected={false} onChange={[Function]} textColor="inherit" value={1} classes={{...}} disabled={false}>
                            <WithStyles(ButtonBase) focusRipple={true} className="MuiTab-root-106 RSFTabsRow-tab-92 MuiTab-textColorInherit-108" role="tab" aria-selected={false} disabled={false} onClick={[Function]}>
                              <ButtonBase focusRipple={true} className="MuiTab-root-106 RSFTabsRow-tab-92 MuiTab-textColorInherit-108" role="tab" aria-selected={false} disabled={false} onClick={[Function]} classes={{...}} centerRipple={false} component="button" disableRipple={false} disableTouchRipple={false} tabIndex="0" type="button">
                                <button className="MuiButtonBase-root-118 MuiTab-root-106 RSFTabsRow-tab-92 MuiTab-textColorInherit-108" onBlur={[Function]} onFocus={[Function]} onKeyDown={[Function]} onKeyUp={[Function]} onMouseDown={[Function]} onMouseLeave={[Function]} onMouseUp={[Function]} onTouchEnd={[Function]} onTouchMove={[Function]} onTouchStart={[Function]} tabIndex="0" type="button" disabled={false} role="tab" aria-selected={false} onClick={[Function]}>
                                  <span className="MuiTab-wrapper-114">
                                    <span className="MuiTab-labelContainer-115">
                                      <span className="MuiTab-label-116">
                                        <WithStyles(inject-Link) className="RSFTabsRow-link-95" to="https://www.example.com" prefetch={[undefined]} onClick={[Function]}>
                                          <inject-Link className="RSFTabsRow-link-95" to="https://www.example.com" prefetch={[undefined]} onClick={[Function]} classes={{...}}>
                                            <Link className="RSFTabsRow-link-95" to="https://www.example.com" prefetch={[undefined]} onClick={[Function]} classes={{...}} history={{...}} router={{...}} location={{...}} anchorProps={{...}}>
                                              <a data-moov-link="on" className="RSFLink-root-121 RSFTabsRow-link-95" style={[undefined]} onClick={[Function]} href="https://www.example.com">
                                                Tab 2
                                              </a>
                                            </Link>
                                          </inject-Link>
                                        </WithStyles(inject-Link)>
                                      </span>
                                    </span>
                                  </span>
                                  <NoSsr defer={false} fallback={{...}}>
                                    <WithStyles(TouchRipple) innerRef={[Function]} center={false}>
                                      <TouchRipple center={false} classes={{...}}>
                                        <TransitionGroup component="span" enter={true} exit={true} className="MuiTouchRipple-root-122" childFactory={[Function: childFactory]}>
                                          <span className="MuiTouchRipple-root-122" />
                                        </TransitionGroup>
                                      </TouchRipple>
                                    </WithStyles(TouchRipple)>
                                  </NoSsr>
                                </button>
                              </ButtonBase>
                            </WithStyles(ButtonBase)>
                          </Tab>
                        </WithStyles(Tab)>
                      </div>
                      <WithStyles(TabIndicator) className="MuiTabs-indicator-105 RSFTabsRow-indicator-89 RSFTabsRow-noSelection-90" color="secondary" style={{...}}>
                        <TabIndicator className="MuiTabs-indicator-105 RSFTabsRow-indicator-89 RSFTabsRow-noSelection-90" color="secondary" style={{...}} classes={{...}}>
                          <span className="MuiPrivateTabIndicator-root-129 MuiPrivateTabIndicator-colorSecondary-131 MuiTabs-indicator-105 RSFTabsRow-indicator-89 RSFTabsRow-noSelection-90" style={{...}} />
                        </TabIndicator>
                      </WithStyles(TabIndicator)>
                    </div>
                  </div>
                </div>
              </Tabs>
            </WithStyles(Tabs)>
          </TabsRow>
        </inject-TabsRow-with-app>
      </WithStyles(inject-TabsRow-with-app)>
    </MuiThemeProviderOld>
  </Provider>
</TestProvider>
`;
